# test-shred

./: Cargo.toml
src/: main.rs
