[package]
name = "shreds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.10"
solana-sdk="1.14.10"
solana-gossip = "1.14.10"
solana-streamer="1.14.10"
futures = "0.3"
crossbeam = "0.8.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand="0.8.5"